Refactor dominio, dtos y persistencia